--- a/recipes/templates/base.html
+++ b/recipes/templates/base.html
@@ -2,14 +2,20 @@
 <html lang="en">
   <head>
     {% include 'recipes/partials/_head.html' %}
-    <title>{% block title %}{% endblock title %} | Recipes</title>
+    <title>
+      {% block title %}
+
+      {% endblock %}| Recipes
+    </title>
   </head>
   <body>
     {% include 'recipes/partials/_header.html' %}
     {% include 'recipes/partials/_search.html' %}
     <main class="main-content-container">
-      {% block content %} {% endblock content %}
+      {% block content %}
+
+      {% endblock %}
     </main>
-    {% include "recipes/partials/_footer.html" %}
+    {% include 'recipes/partials/_footer.html' %}
   </body>
 </html>
