--- a/recipes/templates/recipes/partials/_search.html
+++ b/recipes/templates/recipes/partials/_search.html
@@ -1,16 +1,8 @@
-   <div class="search-container">
-      <div class="container">
-        <form class="search-form" action="">
-          <input
-            type="text"
-            name="search"
-            id="search"
-            placeholder="Search for a recipe"
-            class="search-input"
-          />
-          <button type="submit" class="search-button">
-            <i class="fas fa-search"></i>
-          </button>
-        </form>
-      </div>
-    </div>
+<div class="search-container">
+  <div class="container">
+    <form class="search-form" action="">
+      <input type="text" name="search" id="search" placeholder="Search for a recipe" class="search-input" />
+      <button type="submit" class="search-button"><i class="fas fa-search"></i></button>
+    </form>
+  </div>
+</div>
