--- a/recipes/templates/recipes/partials/_header.html
+++ b/recipes/templates/recipes/partials/_header.html
@@ -1,7 +1,7 @@
 <header class="main-header-container">
   <div class="main-header container">
     <h1>
-      <a href="/" class="main-logo">
+      <a href=" {% url 'recipes:index' %} " class="main-logo">
         <i class="fas fa-address-book main-logo-icon"></i>
         <span class="main-logo-text">Recipes</span>
       </a>
