--- a/recipes/static/recipes/css/styles.css
+++ b/recipes/static/recipes/css/styles.css
@@ -158,6 +158,7 @@ h6 {
 
 .recipe-list-item {
   max-width: 64rem;
+  height: fit-content;
 }
 
 .recipe-list-item:hover {
@@ -225,6 +226,10 @@ h6 {
 
 .recipe-footer a:hover {
   filter: brightness(2);
+}
+
+.recipe .preparation-steps{
+  padding:var(--spacing-gutter-medium);
 }
 
 .main-content-detail .recipe-list-item {
