--- a/recipes/templates/recipes/partials/_recipes.html
+++ b/recipes/templates/recipes/partials/_recipes.html
@@ -1,9 +1,9 @@
 <div class="recipe recipe-list-item">
   <div class="recipe-cover">
-    <img src="https://placehold.co/1280x720" alt="Temporário" />
+    <a href=" {% url 'recipes:detail' recipe.id %} "><img src="{{ recipe.cover.url }}" alt="Temporário" /></a>
   </div>
   <div class="recipe-title-container">
-    <h2 class="recipe-title">{{ recipe.title }}.</h2>
+    <a href=" {% url 'recipes:detail' recipe.id %} "><h2 class="recipe-title">{{ recipe.title }}.</h2></a>
   </div>
 
   <div class="recipe-author">
@@ -36,10 +36,16 @@
       <div class="recipe-meta-text">{{ recipe.servings }} {{ recipe.servings_unit }}</div>
     </div>
   </div>
-  <footer class="recipe-footer">
-    <a class="recipe-read-more button button-dark button-full-width" href="/recipes/3/">
-      <i class="fas fa-eye"></i>
-      <span>ver mais...</span>
-    </a>
-  </footer>
+  {% if not recipe_id %}
+    <footer class="recipe-footer">
+      <a class="recipe-read-more button button-dark button-full-width" href=" {% url 'recipes:detail' recipe.id %} ">
+        <i class="fas fa-eye"></i>
+        <span>ver mais...</span>
+      </a>
+    </footer>
+  {% endif %}
+
+  {% if recipe_id %}
+    <div class="preparation-steps">{{ recipe.preparation_steps|linebreaksbr }}</div>
+  {% endif %}
 </div>
