--- a/recipes/templates/recipes/pages/index.html
+++ b/recipes/templates/recipes/pages/index.html
@@ -7,6 +7,10 @@
   <div class="main-content main-content-list container">
     {% for recipe in recipes %}
       {% include 'recipes/partials/_recipes.html' %}
+    {% empty %}
+      <div class="center">
+        <h1>No recipes found here</h1>
+      </div>
     {% endfor %}
   </div>
 {% endblock %}
