--- a/recipes/templates/recipes/partials/_recipes.html
+++ b/recipes/templates/recipes/partials/_recipes.html
@@ -1,7 +1,9 @@
 <div class="recipe recipe-list-item">
-  <div class="recipe-cover">
-    <a href=" {% url 'recipes:detail' recipe.id %} "><img src="{{ recipe.cover.url }}" alt="Temporário" /></a>
-  </div>
+  {% if recipe.cover %}
+    <div class="recipe-cover">
+      <a href=" {% url 'recipes:detail' recipe.id %} "><img src="{{ recipe.cover.url }}" alt="Temporário" /></a>
+    </div>
+  {% endif %}
   <div class="recipe-title-container">
     <a href=" {% url 'recipes:detail' recipe.id %} "><h2 class="recipe-title">{{ recipe.title }}.</h2></a>
   </div>
@@ -54,6 +56,12 @@
   {% endif %}
 
   {% if recipe_id %}
-    <div class="preparation-steps">{{ recipe.preparation_steps|linebreaksbr }}</div>
+    <div class="preparation-steps">
+      {% if recipe.preparation_steps_is_html is True %}
+        {{ recipe.preparation_steps|safe }}
+      {% else %}
+        {{ recipe.preparation_steps|linebreaksbr }}
+      {% endif %}
+    </div>
   {% endif %}
 </div>
