--- a/recipes/static/recipes/css/styles.css
+++ b/recipes/static/recipes/css/styles.css
@@ -136,6 +136,9 @@ h6 {
 .main-content {
   padding-top: 0;
 }
+.main-content-container {
+  min-height: 100vh;
+}
 
 .main-content-list {
   display: grid;
@@ -262,4 +265,25 @@ h6 {
 
 .main-footer a:hover {
   filter: brightness(0.8);
+}
+
+.preparation-steps h1,
+.preparation-steps h2,
+.preparation-steps h3,
+.preparation-steps h4,
+.preparation-steps h5,
+.preparation-steps h6,
+.preparation-steps p,
+.preparation-steps pre {
+  margin: 2rem 0;
+}
+
+.preparation-steps ol,
+.preparation-steps ul {
+  margin: 2rem;
+  padding: 0 2rem;
+}
+
+.center {
+  text-align: center;
 }
