feat:  adjust recipe views

--- a/recipes/templates/recipes/pages/index.html
+++ b/recipes/templates/recipes/pages/index.html
@@ -9,7 +9,7 @@
       {% include 'recipes/partials/_recipes.html' %}
     {% empty %}
       <div class="center">
-        <h1>No recipes found here</h1>
+        <h1>No recipes found here.</h1>
       </div>
     {% endfor %}
   </div>
